--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 certifi==2024.7.4
+cffi==1.16.0
 chardet==3.0.4
+charset-normalizer==3.3.2
+cryptography==42.0.8
+Deprecated==1.2.14
 googletrans==3.1.0a0
 h11==0.9.0
 h2==3.2.0
@@ -9,11 +13,21 @@ httpcore==0.9.1
 httpx==0.13.3
 hyperframe==5.2.0
 idna==2.10
+langdetect==1.0.9
+lxml==5.2.2
 packaging==24.1
 pdf2image==1.17.0
+pdfminer.six==20231228
+pdfplumber==0.11.2
+pikepdf==9.0.0
 pillow==10.4.0
+pycparser==2.22
 PyMuPDF==1.24.7
 PyMuPDFb==1.24.6
+PyPDF2==3.0.1
+pypdfium2==4.30.0
 pytesseract==0.3.10
 rfc3986==1.5.0
+six==1.16.0
 sniffio==1.3.1
+wrapt==1.16.0
